--- a/exemple1.html
+++ b/exemple1.html
@@ -17,6 +17,7 @@
         <input type="text" id="firstname" name="firstname">
         <label for="message">Votre message :</label>
         <textarea name="message" id="message" cols="30" rows="10"></textarea>
+        <input type="submit" value="Envoyer">
     </form>
 </body>
 </html>
