--- a/exemple1.html
+++ b/exemple1.html
@@ -9,15 +9,17 @@
 <body>
     <h1>Formulaire AJAX</h1>
     <form action="" method="POST" role="form">
-        <label for="name">Nom :</label>
-        <input type="text" id="name" name="name">
-        <label for="firstname">Prénom :</label>
-        <input type="text" id="firstname" name="firstname">
-        <label for="email">Adresse mail :</label>
-        <input type="text" id="firstname" name="firstname">
-        <label for="message">Votre message :</label>
-        <textarea name="message" id="message" cols="30" rows="10"></textarea>
-        <input type="submit" value="Envoyer">
+    <ul>
+        <li><label for="name">Nom :</label></li>
+        <li><input type="text" id="name" name="name"></li>
+        <li><label for="firstname">Prénom :</label></li>
+        <li><input type="text" id="firstname" name="firstname"></li>
+        <li><label for="email">Adresse mail :</label></li>
+        <li><input type="text" id="firstname" name="firstname"></li>
+        <li><label for="message">Votre message :</label></li>
+        <li><textarea name="message" id="message" cols="30" rows="10"></textarea></li>
+        <li><input type="submit" value="Envoyer"></li>
+    </ul>
     </form>
 </body>
 </html>
